Fix bsky likes on mobile

--- a/src/_sass/_post.scss
+++ b/src/_sass/_post.scss
@@ -409,7 +409,7 @@
 
 .post__likes {
   margin-bottom: 2rem;
-  height: 400px;
+  min-height: 400px;
 }
 
 .post__likesTitle {
